@@ -35,6 +35,13 @@ and allowing the original propname to be accessible in select_by().
 - fix to typing in clause construction which specifically helps
 type issues with polymorphic_union (CAST/ColumnClause propigates
 its type to proxy columns)
+- mapper compilation work ongoing, someday it'll work....moved 
+around the initialization of MapperProperty objects to be after
+all mappers are created to better handle circular compilations.
+do_init() method is called on all properties now which are more 
+aware of their "inherited" status if so.
+- eager loads explicitly disallowed on self-referential relationships, or
+relationships to an inheriting mapper (which is also self-referential)
 
 0.2.5
 - fixed endless loop bug in select_by(), if the traversal hit
